_includes/style.css
body {
    font-family: 'Roboto', sans-serif;
    /* height: 98vh; */
    max-width: 70%;
    min-width: 50vh;
    margin: auto;
    background-color: white;
    background-image: radial-gradient(rgb(189, 189, 189) 1px, white 1px);
    background-size: 20px 20px;
    font-weight: 100;
}

div.container {
    margin: auto;
    height: fit-content;
    padding: 2em 4em;
    align-items: center;
    gap: 2em;
}

@media (max-width: 25em) {
    div.container {
        padding: 6vw 3vw;
    }
}

div.container>div.title {
    padding: 0;
}

h1>a {
    color: initial;
    text-decoration: initial;
}

div.home {
    max-width: 30em;
    margin: auto;
}

div.centre-vertical {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    text-align: center;
    margin: 10% 0;
    min-height: 200px;
}

div.title>h2 {
    font-weight: 100;
    font-size: large;
}

div.title>h1,
div.title>h2 {
    margin: 0;
}

img.profile {
    width: 20em;
    vertical-align: middle;
    border-radius: 50%;
    margin: auto;
    margin-bottom: 2em;
}

a.button1 {
    display: inline-block;
    padding: 0.35em 1.2em;
    border: 0.1em solid black;
    margin: 0 0.3em 0.3em 0;
    border-radius: 0.12em;
    box-sizing: border-box;
    text-decoration: none;
    font-weight: 300;
    color: black;
    text-align: center;
    transition: all 0.2s;
}

a.button1:hover {
    color: white;
    background-color: black;
}

@media all and (max-width:30em) {
    a.button1 {
        display: block;
        margin: 0.4em auto;
    }
}

div#clock {
    font-family: 'Fira Code', 'Roboto Mono', monospace;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: 98%;
    text-align: center;
}

div#title {
    font-size: 14vw;
    display: inline-block;
    white-space: nowrap;
}

div#subtitle {
    font-size: 3vw;
    font-weight: lighter;
    font-style: italic;
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: black;
        background-image: radial-gradient(rgb(66, 66, 66) 1px, black 1px);
        color: white;
    }
    a.button1 {
        /* background-color: black; */
        border: 0.1em solid white;
        color: white;
    }
    
    a.button1:hover {
        color: black;
        background-color: white;
    }
}

